# Audiogram

./: README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
public/: opfs-sw.js  site.webmanifest
src/: App.vue  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  tray.rs  updater.rs
src/app/: App.vue  Updatedevpanel.vue
src/components/: DropOverlay.vue  ImportProgressDialog.vue  ImportProgressSheet.vue  NetworkStatusToast.vue  WindowToolbar.vue
src/composables/: useDeleteConfirmDialog.ts  useDeviceLayout.ts  useExternalLinkInterceptor.ts  useFileDrop.ts  useImageColor.ts  useImport.ts  useInfiniteList.ts  useLibraryView.ts  useMediaContext.ts  useMobilePlayerColor.ts  useNetworkStatus.ts  usePictureInPicture.ts  usePreventPinchZoom.ts  useSetupRootClasses.ts  useSidebar.ts  useStatsQueries.ts  useTrackContextActions.ts  useTrackMenu.ts  useTrackTags.ts
src/db/: entities.ts  index.ts  unit-of-work.ts
src/helpers/: mock.ts  profiler.ts
src/i18n/: index.ts
src/layouts/: DefaultLayout.vue  MobileLayout.vue
src/lib/: math.ts  metadata.ts  profiler.ts  query-keys.ts  random.ts  shuffle.ts  storage.ts  uniqeName.ts
src/pages/: AlbumPage.vue  AllMusicPage.vue  ArtistPage.vue  FavoritePage.vue  IndexPage.vue  PlaylistPage.vue  ProfilePage.vue  SearchPage.vue
(+498 files in other folders)
